feat(main): some fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/info-system-department
+spring.datasource.username=temp
+spring.datasource.password=temp
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.security.user.name=test
+spring.security.user.password=test
 
+spring.jpa.show-sql=true
+
+#spring.main.allow-bean-definition-overriding=true
+
+spring.batch.jdbc.initialize-schema=always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
