feat(main): updated models, added data.sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,14 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/info-system-department
 spring.datasource.username=temp
 spring.datasource.password=temp
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+
+
+#second db ...
+#spring.second-datasource.url = jdbc:postgresql://localhost:5432/mvcdemo
+#spring.second-datasource.username = temp
+#spring.second-datasource.password = temp
+#spring.second-datasource.driverClassName = org.postgresql.Driver
+
 spring.security.user.name=test
 spring.security.user.password=test
 
@@ -12,4 +19,10 @@ spring.jpa.show-sql=true
 
 spring.batch.jdbc.initialize-schema=always
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+spring.sql.init.mode=embedded
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
