--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>info-system-department</name>
 	<description>info-system-department</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 		<spring-modulith.version>1.1.2</spring-modulith.version>
 	</properties>
 	<dependencies>
@@ -102,7 +102,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 <!--			<dependency>-->
