--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,11 @@
 			<artifactId>poi-tl</artifactId>
 			<version>1.12.2</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.11.0</version>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>3.2.1</version>
 		</dependency>
 
 		<dependency>
