--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.datasource.password=temp
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 
-#server.address=192.168.0.201
+#Server Data
+server.address=localhost
 server.port=8080
 
 #second db ...
@@ -14,7 +15,16 @@ spring.second-datasource.password = temp
 spring.second-datasource.driver-class-name = org.postgresql.Driver
 spring.second-datasource.hikari.driver-class-name=org.postgresql.Driver
 
+# Apache Kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=info-system-sql
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
+#Spring
 spring.security.user.name=test
 spring.security.user.password=test
 
