--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,9 @@ spring.sql.init.data-locations=classpath:data.sql
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+template.file.path=classpath:template.docx
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=13MB
+spring.servlet.multipart.max-request-size=13MB
+
+number.of.threads=2
