--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>info-system-department</name>
 	<description>info-system-department</description>
-	<properties>
-		<java.version>21</java.version>
-		<spring-modulith.version>1.1.2</spring-modulith.version>
-	</properties>
+    <properties>
+        <java.version>21</java.version>
+        <spring-modulith.version>1.1.2</spring-modulith.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+    </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
