updated models/repo/services, added base for 'update database'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 
 #server.address=192.168.0.201
-server.port=8080
+server.port=25565
 
 #second db ...
 spring.second-datasource.jdbc-url = jdbc:postgresql://localhost:5432/data-support
@@ -34,7 +34,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 template.file.path=classpath:template.docx
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=13MB
-spring.servlet.multipart.max-request-size=13MB
-
+spring.servlet.multipart.file-size-threshold=15MB
+spring.servlet.multipart.max-file-size=32MB
+spring.servlet.multipart.max-request-size=32MB
 number.of.threads=2
+
+server.tomcat.connection-timeout=60000
