--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>ru.emiren</groupId>
 	<artifactId>app</artifactId>
-	<version>0.9.2</version>
+	<version>1.0.0</version>
 	<name>info-system-department</name>
 	<description>info-system-department</description>
     <properties>
@@ -157,7 +157,11 @@
             <artifactId>jakarta.validation-api</artifactId>
             <version>3.0.2</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+	</dependencies>
 	<dependencyManagement>
 		<dependencies>
 
