--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,13 @@ spring.servlet.multipart.max-request-size=32MB
 number.of.threads=2
 
 server.tomcat.connection-timeout=60000
+
+# Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=emilsamigullin217@gmail.com
+spring.mail.password=repz hunw blgj butc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
