--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,24 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>6.1.13</version>
 		</dependency>
-<!--		&lt;!&ndash; https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api &ndash;&gt;-->
+
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-full -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml-full</artifactId>
+			<version>5.3.0</version>
+		</dependency>
+
+		<!--		&lt;!&ndash; https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api &ndash;&gt;-->
 <!--		<dependency>-->
 <!--			<groupId>jakarta.mail</groupId>-->
 <!--			<artifactId>jakarta.mail-api</artifactId>-->
 <!--			<version>2.1.3</version>-->
 <!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -58,6 +70,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
+
 
 		<dependency>
 			<groupId>junit</groupId>
