--- a/fqw/pom.xml
+++ b/fqw/pom.xml
@@ -3,6 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
+<!--        <groupId>ru.emiren</groupId>-->
+<!--        <artifactId>info-system-department</artifactId>-->
+<!--        <version>1.0.0-STABLE</version>-->
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.3</version>
