--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ru.emiren</groupId>
-	<artifactId>parent-project</artifactId>
-	<version>1.0.0</version>
+	<artifactId>info-system-department</artifactId>
+	<version>1.0.0-STABLE</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -32,6 +32,8 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			</dependency>
+
+
 		</dependencies>
 
 	</dependencyManagement>
