feat(main): updated properties, added some appContext to Hub and implementations to HUB

--- a/fqw/src/main/resources/application.properties
+++ b/fqw/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.jdbc-url=jdbc:postgresql://localhost:5432/info-system-department
-spring.datasource.username=temp
-spring.datasource.password=temp
+spring.datasource.username=${POSTGRES_LOGIN}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 
@@ -9,8 +9,8 @@ server.port=8080
 
 #second db ...
 spring.second-datasource.jdbc-url = jdbc:postgresql://localhost:5432/data-support
-spring.second-datasource.username = temp
-spring.second-datasource.password = temp
+spring.second-datasource.username = ${POSTGRES_LOGIN}
+spring.second-datasource.password = ${POSTGRES_PASSWORD}
 spring.second-datasource.driver-class-name = org.postgresql.Driver
 spring.second-datasource.hikari.driver-class-name=org.postgresql.Driver
 
@@ -44,8 +44,8 @@ server.tomcat.connection-timeout=60000
 # Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=emilsamigullin217@gmail.com
-spring.mail.password=repz hunw blgj butc
+spring.mail.username=${GOOGLE_LOGIN}
+spring.mail.password=${GOOGLE_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
