feat(main): hub reconstruction

--- a/fqw/src/main/resources/application.properties
+++ b/fqw/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.second-datasource.driver-class-name = org.postgresql.Driver
 spring.second-datasource.hikari.driver-class-name=org.postgresql.Driver
 
 
-spring.security.user.name=test
-spring.security.user.password=test
+spring.security.user.name    = ${SECURITY_LOGIN}
+spring.security.user.password= ${SECURITY_PASSWORD}
 
 spring.jpa.show-sql=true
 
