--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
-				<optional>true</optional>
+				<scope>provided</scope>
 			</dependency>
 
 		</dependencies>
@@ -45,4 +45,18 @@
 	<properties>
 		<java.version>21</java.version>
 	</properties>
+
+	<build>
+	<plugins>
+		<plugin>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok-maven-plugin</artifactId>
+			<executions>
+				<execution>
+					<phase>generate-sources</phase>
+				</execution>
+			</executions>
+		</plugin>
+	</plugins>
+</build>
 </project>
