feat(main): refactoring and adding security configs

--- a/fqw/src/main/resources/application.properties
+++ b/fqw/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=FQWorkstation
+
 spring.datasource.jdbc-url=jdbc:postgresql://localhost:5432/info-system-department
 spring.datasource.username=${POSTGRES_LOGIN}
 spring.datasource.password=${POSTGRES_PASSWORD}
