--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,17 @@
 				<artifactId>lombok</artifactId>
 				<scope>provided</scope>
 			</dependency>
-
+			<dependency>
+				<groupId>io.gatling.highcharts</groupId>
+				<artifactId>gatling-charts-highcharts</artifactId>
+				<version>3.13.1</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.gatling</groupId>
+				<artifactId>gatling-app</artifactId>
+				<version>3.13.1</version>
+			</dependency>
 		</dependencies>
 
 	</dependencyManagement>
@@ -60,6 +70,12 @@
 
 	<build>
 	<plugins>
+		<plugin>
+			<groupId>io.gatling</groupId>
+			<artifactId>gatling-maven-plugin</artifactId>
+			<version>4.12.2</version>
+
+		</plugin>
 		<plugin>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok-maven-plugin</artifactId>
