--- a/fqw/src/main/resources/application.properties
+++ b/fqw/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=FQWorkstation
 
-spring.datasource.jdbc-url=jdbc:postgresql://localhost:5432/info-system-department
+spring.datasource.jdbc-url=jdbc:postgresql://localhost:5432/fqworkstation
 spring.datasource.username=${POSTGRES_LOGIN}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -10,11 +10,11 @@ spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 server.port=8080
 
 #second db ...
-spring.second-datasource.jdbc-url = jdbc:postgresql://localhost:5432/data-support
-spring.second-datasource.username = ${POSTGRES_LOGIN}
-spring.second-datasource.password = ${POSTGRES_PASSWORD}
-spring.second-datasource.driver-class-name = org.postgresql.Driver
-spring.second-datasource.hikari.driver-class-name=org.postgresql.Driver
+spring.support-datasource.jdbc-url = jdbc:postgresql://localhost:5432/support
+spring.support-datasource.username = ${POSTGRES_LOGIN}
+spring.support-datasource.password = ${POSTGRES_PASSWORD}
+spring.support-datasource.driver-class-name = org.postgresql.Driver
+spring.support-datasource.hikari.driver-class-name=org.postgresql.Driver
 
 
 spring.security.user.name    = ${SECURITY_LOGIN}
@@ -52,3 +52,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
+fqw.application.debug=debug
+
+#logging.level.org.hibernate=trace
+#logging.level.root=INFO
+#logging.level.com.zaxxer.hikari=debug
