--- a/fqw/pom.xml
+++ b/fqw/pom.xml
@@ -13,7 +13,7 @@
     </parent>
     <groupId>ru.emiren</groupId>
     <artifactId>fqw</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.0</version>
 	<packaging>jar</packaging>
     <name>info-system-department</name>
     <description>info-system-department</description>
@@ -46,6 +46,11 @@
             <artifactId>thymeleaf-layout-dialect</artifactId>
             <version>3.3.0</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>nl.42</groupId>-->
+<!--            <artifactId>spring-boot-docker-postgres</artifactId>-->
+<!--            <version></version>-->
+<!--        </dependency> -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
