--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
 	<version>1.0.0-STABLE</version>
 	<packaging>pom</packaging>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.2.3</version>
+		<relativePath/>
+	</parent>
+
 	<developers>
 		<developer>
 			<id></id>
@@ -22,6 +29,10 @@
 	<modules>
 		<module>fqw</module>
 		<module>hub</module>
+        <module>auth</module>
+        <module>protocol</module>
+		<module>support</module>
+		<module>email</module>
 	</modules>
 
 	<dependencyManagement>
