--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -21,7 +21,7 @@ http{
         access_log off;
 
         location /{
-            proxy_pass http://hub:8081/;
+            proxy_pass http://hub:13132/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -30,7 +30,43 @@ http{
         }
 
         location /sql/{
-            proxy_pass http://fqw:8080/;
+            proxy_pass http://fqw:13130/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /support/{
+            proxy_pass http://support:13131/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /auth/{
+           proxy_pass http://auth:13133/;
+           proxy_http_version 1.1;
+           proxy_set_header Upgrade $http_upgrade;
+           proxy_set_header Connection 'upgrade';
+           proxy_set_header Host $host;
+           proxy_cache_bypass $http_upgrade;
+        }
+
+        location /email/{
+            proxy_pass http://email:13135/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /protocol/ {
+            proxy_pass http://protocol:13136/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
