--- a/fqw/src/main/resources/application.properties
+++ b/fqw/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.sql.init.data-locations=classpath:data.sql
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-template.file.path=classpath:template.docx
+#template.file.path=classpath:template.docx
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=64MB
 spring.servlet.multipart.max-file-size=64MB
