feat(main): Most changes. minor quantity of JavaDoc, and some features

--- a/fqw/pom.xml
+++ b/fqw/pom.xml
@@ -51,6 +51,15 @@
 <!--            <artifactId>spring-boot-docker-postgres</artifactId>-->
 <!--            <version></version>-->
 <!--        </dependency> -->
+
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.18.2</version>
+        </dependency>
+
+
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
