feat(microservices): updated, now works all (need some testing, beforehand)

--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.application.name=FQWorkstation-Auth*
-server.port=13133
+spring.application.name=FQWorkstation-Auth
+server.port=13135
 
-spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5432/auth
-spring.datasource.url=jdbc:postgresql://localhost:5432/auth
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5432/Auth
+spring.datasource.url=jdbc:postgresql://localhost:5432/Auth
 spring.datasource.username=${POSTGRES_LOGIN}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
 spring.batch.jdbc.initialize-schema=embedded
@@ -16,3 +17,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 application.secret.keyword=${SECRET_KEYWORD}
 
+spring.security.user.name    = ${SECURITY_LOGIN}
+spring.security.user.password= ${SECURITY_PASSWORD}
