--- a/support/src/main/resources/application.properties
+++ b/support/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 spring.application.name=FQWorkstation-Support
-server.port=13131
+server.port=13133
 
-spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5432/support
-spring.datasource.url=jdbc:postgresql://localhost:5432/auth
-spring.datasource.username=${POSTGRES_LOGIN}
-spring.datasource.password=${POSTGRES_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.driver-class-name=org.postgresql.Driver
+spring.support-datasource.jdbc-url = jdbc:postgresql://localhost:5432/support
+spring.support-datasource.username = ${POSTGRES_LOGIN}
+spring.support-datasource.password = ${POSTGRES_PASSWORD}
+spring.support-datasource.driver-class-name = org.postgresql.Driver
+spring.support-datasource.hikari.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
-spring.batch.jdbc.initialize-schema=embedded
+spring.batch.jdbc.initialize-schema=always
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=embedded
 spring.jpa.hibernate.ddl-auto=update
 
-email.location.uri=http://localhost:
+number.of.threads=2
+
+spring.security.user.name    = ${SECURITY_LOGIN}
+spring.security.user.password= ${SECURITY_PASSWORD}
