--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -1,20 +1,5 @@
-logging.file: /tmp/logs/app.log
-server.port: 13135
-#management.port: 8080
-management.address: 127.0.0.1
-endpoints.shutdown.enabled: true
-server.tomcat.basedir: target/tomcat
-server.tomcat.access_log_pattern: %h %t "%r" %s %b
-security.require_ssl: false
-service.name: Phil
-shell.ssh.enabled: true
-shell.ssh.port: 2222
-#shell.telnet.enabled: false
-#shell.telnet.port: 1111
-shell.auth: spring
-#shell.auth: key
-#shell.auth.key.path: ${user.home}/test/id_rsa.pub.pem
-#shell.auth: simple
+spring.application.name=FQWorkstation-email
+server.port: 13132
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -23,3 +8,6 @@ spring.mail.password=${GOOGLE_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+fqw.application.debug=debug
+number.of.threads=2
