--- a/protocol/src/main/resources/application.properties
+++ b/protocol/src/main/resources/application.properties
@@ -1,2 +1,4 @@
+spring.application.name=FQWorkstation-protocol
 template.file.path=classpath:template.docx
-server.port=13136
+server.port=13134
+number.of.threads=2
