--- a/support/pom.xml
+++ b/support/pom.xml
@@ -13,7 +13,7 @@
     </parent>
     <groupId>ru.emiren</groupId>
     <artifactId>support</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.5.0</version>
     <packaging>jar</packaging>
     <name>info-system-department</name>
     <description>info-system-department</description>
