--- a/email/pom.xml
+++ b/email/pom.xml
@@ -12,11 +12,11 @@
         <relativePath/>
     </parent>
     <groupId>ru.emiren</groupId>
-    <artifactId>protocol</artifactId>
-    <version>1.0.0</version>
+    <artifactId>email</artifactId>
+    <version>0.5.0</version>
     <packaging>jar</packaging>
-    <name>info-system-department</name>
-    <description>info-system-department</description>
+    <name>email</name>
+    <description>email</description>
 
     <scm>
         <connection>scm:git:git:@github.com:gatling/gatling-maven-plugin.git</connection>
