--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.32",
     "@types/node": "^22.10.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -39,5 +40,8 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
     "vite": "^6.1.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "*"
   }
 }
