--- a/support/Dockerfile
+++ b/support/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:21-jdk
 WORKDIR /app
 COPY src/main/resources/ /app/resources/
-COPY target/fqw-1.0.0.jar /app/app.jar
-EXPOSE 13131
+COPY target/support-0.5.0.jar /app/app.jar
+EXPOSE 13133
 ENTRYPOINT ["java", "-jar", "app.jar"]
