--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,18 +13,20 @@ http{
     error_log  /logs/nginx.log;
 
     server {
-        listen 443 ssl;
+        listen 80;
         charset utf-8;
-        server_name emiren.com;
+        server_name localhost;
 
-        ssl_certificate C:\Users\Emil Yusupov\openssl\cert.pem;
-        ssl_certificate_key C:\Users\Emil Yusupov\openssl\key.pem;
+#         ssl_certificate C:\Users\Emil Yusupov\openssl\cert.pem;
+#         ssl_certificate_key C:\Users\Emil Yusupov\openssl\key.pem;
 
         access_log off;
 
         location /{
-            proxy_pass http://frontend:5173/;
-            proxy_http_version 1.1;
+#             proxy_pass http://frontend:5173/;
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;            proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
