--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -32,5 +32,26 @@ http{
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
+        location /fqw-api/{
+            proxy_pass http://fqw:13131/;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+        location /protocol-api/{
+            proxy_pass http://protocol:13134/;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+        location /support-api/{
+            proxy_pass http://support:13133/;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
     }
 }
