feat(microservices): Finished implementing Excel Parser, added templates in frontend and fixed some problems

--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,6 +1,10 @@
+FROM maven:3.9.6-eclipse-temurin-21 as builder
+WORKDIR /builder
+COPY . .
+RUN mvn clean package -DskipTests
+
 FROM openjdk:21-jdk
 WORKDIR /app
-COPY src/main/resources/ /app/resources/
-COPY target/auth.jar /app/app.jar
+COPY --from=builder /builder/target/*.jar /app/app.jar
 EXPOSE 13135
 ENTRYPOINT ["java", "-jar", "app.jar"]
