--- a/hub/Dockerfile
+++ b/hub/Dockerfile
@@ -1,5 +1,10 @@
+FROM maven:3.9.6-eclipse-temurin-21 as builder
+WORKDIR /builder
+COPY . .
+RUN mvn clean package -DskipTests
+
 FROM openjdk:21-jdk
 WORKDIR /app
-COPY target/hub-0.8.0.jar /app/app.jar
+COPY --from=builder /builder/target/*.jar /app/app.jar
 EXPOSE 13136
 ENTRYPOINT ["java", "-jar", "app.jar"]
