--- a/fqw/Dockerfile
+++ b/fqw/Dockerfile
@@ -1,6 +1,10 @@
+FROM maven:3.9.6-eclipse-temurin-21 as builder
+WORKDIR /builder
+COPY . .
+RUN mvn clean package -DskipTests
+
 FROM openjdk:21-jdk
 WORKDIR /app
-COPY src/main/resources/ /app/resources/
-COPY target/fqw-1.0.0.jar /app/app.jar
+COPY --from=builder /builder/target/*.jar /app/app.jar
 EXPOSE 13131
 ENTRYPOINT ["java", "-jar", "app.jar"]
